# naslock

./: Cargo.toml  README.md  config.example.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  keepass_store.rs  main.rs  truenas.rs
