[package]
name = "naslock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "env"] }
directories = "5.0.1"
keepass = "0.8.16"
rpassword = "7.3.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
url = "2.5.4"
uuid = "1.11.0"
zeroize = "1.8.1"

[patch.crates-io]
keepass = { path = "vendor/keepass" }
